<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_fuzzing_broker</name>
  <version>1.0.0</version>
  <description>...</description>
  <maintainer email="lorenz@lteply.com">Lorenz Teply</maintainer>
  <license>GNU GPLv3</license>

  <depend>rclpy</depend>
   <depend>autoware_auto_vehicle_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
